--- a/src/style/App.css
+++ b/src/style/App.css
@@ -193,18 +193,21 @@ body{
     justify-content: center;
     gap: 20px;
 }
+
 .sidebar{
 display: flex;
-flex-direction: column;
- position: relative;
- padding-left: 15px;
-padding-right: 15px; 
-padding-top: 15px; 
-/* height: 100%; */
+flex-direction:column;
+padding:  30px;
+height: 100vh;
+position:sticky;
+ /* justify-content: flex-end;  */
+
+ padding-left: auto;
+padding-right:auto ;
 width: 40vh; 
-justify-content: left; 
-/* position : sticky;
-top :0; */
+top:0;
+  
+
 
 }
 
@@ -220,7 +223,10 @@ top :0; */
 }
 
 .profil {
-        margin-top: 800px; 
+    
+        margin-top: 40px;
+        
+
       }
 
       .icon{
@@ -229,34 +235,78 @@ gap: 150px;
 
       }
 
-  .search-input{
-    border-top-right-radius: 40px;
-    border-bottom-right-radius:30px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: black;
-    border:none ;
-    border-radius: 10px;
+      .i{
+        width: 5%;
+       
+        
+      }
 
-  }
+  
+
+  
 
 
   .Trends {
-border-radius: 15px;
-background-color: #16181c;
-padding: 10px;
-margin: 5px;
-display: flex;
-flex-direction: column;
-gap: 1em;
+   display: flex;
+   flex-direction: column;
+   padding-top: 15px;
+   padding-left:10px ;
+   padding-right: 30px;
+   padding-bottom: 10px;
+   height: 100vh;
+   width: 40vh;
   }
 
-  .Trend{
+  .search-bar{
+    display: flex;
+    border-radius: 20px;
+    background-color: #2F3336;
+    padding: 10px;
+    margin: 10px 10px 10px 10px;
+    justify-content: right;
+    
+    
+}
+  
+  .search-input{
+    width: 100%;
+        background: none;
+        border: none;
+        background-color:#2F3336;
+        font-size: 15px;
+        color: white;
+        outline:none ;
+  }
+
+  .trending-items{
+    border-radius:20px ;
+    background-color: #2F3336;
+    padding: 10px;
+    padding-left: 5px;
+    margin-top: 10px;
+    height: 400px;
+  }
+  .trends-header{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-     
+    padding: 5px;
+    margin: 5px;
+    
   }
+
+  .topic{
+
+    padding: 5px;
+    margin:1px;
+    font-weight: 900;
+  }
+
+  .topics{
+    padding:5px ;
+    margin:1px ;
+  }
+  
+  
 
   .btn{
         text-transform: capitalize;
@@ -270,50 +320,31 @@ gap: 1em;
         margin: 10px;
         padding-left: 70px;
         padding-right:70px ;
+        align-items: center;
   }
 
 
   .buttons {
-    text-transform: capitalize;
-    padding: .7rem 1.5rem;
+    height: 25px;
+    width: 80px;
     border: none;
-    border-radius: 50px;
+    border-radius: 30px;
     background-color: #FFF;
     color: black;
     font-size: 1rem;
+    margin-left: 12px;
 }
 
-.search{
-    display: flex;
-    border-radius: 40px;
-    margin-top: 5px;
-    gap: 10px;
-    background-color: #16181c;
-    padding: 10px 15px;
-}
-.search  input{
-    border: none;
-    background-color: #16181c;
-    border-radius: 20px;
-    padding: 6px 10px;
-    width: 100%;
-    outline: none;
-
+.follow{
+    
+    border-radius:20px;
+    background-color: #2F3336;
+    padding:15px ;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    
 }
 
-.trending-item {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
   
-
-  }
-
-
-
-
-
-
-
- 
+    
