--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap');
 
 
@@ -232,23 +237,39 @@ li:hover{
     transition: #181818 100ms ease-out;
     border-radius: 20px;
 }
+.profil:hover{
+    cursor: pointer;
+    background-color: #181818;
+    transition: #181818 100ms ease-out;
+    border-radius: 20px;
+    
+}
 
 .profil {
     
-        margin-top: 20px;
-        border-radius: 50%;
-        cursor: pointer;
-        flex: 0 0 40px;
-        margin: 0 auto;
+       margin-top: 50px;
+        justify-content:space-between;
+        gap: 3rem;
+        align-items: center;
         
-
+       
+       
       }
 
-      .icon{
+
+      .profil,.profil-title{
+        display:inline ;
+        margin: 0 auto ;
+        float: right; 
+         
+        
+      }
+
+      .profil-title{
 display: flex;
-justify-content: space-evenly;
-align-items: center;
-padding: 7px
+flex-direction: column ;
+
+
 
       }
       .details{
@@ -259,14 +280,7 @@ padding: 7px
       margin: 10px;
       }
 
-      .i{
-        max-width: 50%;
-    max-height: 100px;
-    border-radius: 100%;
-       
-        
-      }
-
+      
   
 
   
@@ -377,29 +391,26 @@ padding: 7px
     
 }
 
-.follow-suggestion{
- display: flex;
- justify-content: space-between; 
-}
 
-.follow-suggestions{
+ 
+
+
+.follow-suggestions,.follow-suggestion{
     display: flex;
-    flex-direction: row;
-    gap: 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  
+    
 }
 
+a{
+    text-decoration: none;
+    
+}
 a:hover{
     cursor: pointer;
+
+    
 }
 
-link{
-    text-decoration: none;
-    color: #FFF;
-}
   
     
 .sidebar-link {
@@ -410,3 +421,19 @@ link{
   .sidebar-link:hover {
     color: #007bff; 
   }
+
+  /* Add this to your CSS file */
+.favorite-icon {
+    /* Default style */
+    fill: #f70909; /* Default fill color */
+  }
+  
+  .favorite-icon.favorited {
+    /* Style when hovered (or favorited) */
+    fill: rgb(173, 170, 170); /* Fill color on hover */
+    filter: brightness(120%); /* Optional additional effect */
+  }
+  
+  
+
+  
