--- a/src/style/App.css
+++ b/src/style/App.css
@@ -300,7 +300,7 @@ flex-direction: column ;
   .search-bar{
   font-size: 14px;
   font-family: arial, sans-serif;
-  color: #202124;
+  color: #1e1e1f;
   display: flex;
   z-index: 3;
   height: 44px;
@@ -490,16 +490,105 @@ a:hover{
     }
   }
 
-  .cover {
-    width: 100%;
-    background-color: #555;
-    height: 200px;
-    overflow: hidden;
+ 
 
-    img {
-      width: 100%;
-      object-fit: cover;
-      object-position: center;
-    }
-  }
+  /* profile */
+
+  .headerprofileimage {
+    margin-top: 10px;
+    position: relative;
+
+
+}
+
+#headerimage {
+    width: 700px;
+  height:200px;
+}
+
+#profilepic {
+    border-radius: 50%;
+    width: 150px;
+  height:130px;
+    position: absolute;
+    top: 130px;
+    left: 20px;
+    border: 4px solid rgb(21, 32, 43);
+}
+
+.editprofile {
+    margin-top: 5px;
+    float: right;
+    border: 1px solid rgb(155, 157, 160);
+    border-radius: 20px;
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.bio {
+    margin-top: 55px;
+    margin-left: 20px;
+    line-height: 40px;
+    font-size: 15px;
+}
+
+.handle {
+    line-height: 19px;
+    margin-bottom: 10px;
+}
+
+.followers {
+    margin-right: 15px;
+}
+
+.nawa {
+    display: flex;
+}
+
+.heading {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid white;
+    margin-top: 10px;
+    font-weight: bold;
+
+}
+
+.heading p {
+    display: block;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.heading p:hover {
+    background: royalblue;
+}
+
+.avi {
+    width: 50px;
+    border-radius: 50%;
+    height: 50px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.mytweets {
+    display: flex;
+    margin: 15px 0 15px 0;
+    margin-bottom: 800px;
+}
+
+.tweetcontent {
+    margin-top: 5px;
+}
+
+.retweeticons {
+    margin-top: 5px;
+    margin-left: -10px;
+    display: inline-flex;
+    justify-content: space-evenly;
+}
   
+
